--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/logo2.png" />
+    <link rel="icon" type="image/png" href="/src/assets/Alnsr Aldahabi Logofav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALNSR ALDAHABI TYRE TRADING</title>
   </head>
